<resources>
    <string name="app_name">Floating Apps</string>
    <string name="floating_pdf">Floating PDF</string>
    <string name="floating_calc">Floating Calculator</string>
    <string name="floating_bible">Floating Bible</string>
    <string name="floating_voice_translator">Video Voice Translator</string>
    <string name="floating_clicker">Floating Clicker</string>
    
    <string name="path_hint">Path to PDF File</string>
    <string name="browse_files">Browse Files</string>
    <string name="select_file">Select File</string>
    <string name="ok">OK</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="open">Open</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="grant">Grant</string>
    <string name="send">Send</string>
    <string name="reason">\nReason: %1$s</string>
    <string name="loading">Loading...</string>
    <string name="send_message">Send Message</string>
    <string name="folder_icon">Folder Icon</string>
    <string name="invalid_syntax">Invalid Syntax</string>
    
    <string name="asHost">Start as Host</string>
    <string name="asGuest">Connect as Guest</string>
    <string name="select_connect_mode">Select Connect Mode</string>
    <string name="asController">Continue as Device Clicker</string>
    <string name="asService">Continue as Clicked Device</string>
    <string name="select_clicker_mode">Select Clicker Mode</string>
    <string name="connect_through_bluetooth">Connect through Bluetooth</string>
    <string name="activate_service">Activate Service</string>
    <string name="device_disconnected">Device Disconnected</string>
    <string name="device_disconnected_message">The remote device has ended the connection, and the session is no longer active. You can try reconnecting to resume the session.</string>
    <string name="activate_service_message">Please turn on Floating Clicker in Accessibility Settings. If it is on, turn it off and turn it on again.</string>
    <string name="clicker_uuid">1cf64473-3259-4cb7-8f91-5ebb341506cd</string>
    
    <string name="grant_permissions">Grant Permissions</string>
    <string name="incorrect_format_message">Are you sure this is a PDF file?</string>
    <string name="display_permission_message">For this app to work, you need to grant display over other apps permission.</string>
    <string name="waiting_for_connection">Waiting for connection...</string>
    <string name="null_socket">Bluetooth Socket is not available</string>
    <string name="bluetooth_not_supported">This feature is not supported on this device.</string>
    <string name="activate_bluetooth">For this feature to work, you need to activate Bluetooth.</string>
    <string name="bluetooth_permission_needed">Please grant Nearby Devices permission so that this app will be able to use Bluetooth.</string>
    <string name="enable_bluetooth">Please turn on Bluetooth for this feature to work.</string>
    <string name="files_permission_message">For this app to work, you need to grant management of all files permission.</string>
    <string name="bluetooth_error_occurred">An error occurred while trying to use Bluetooth. Please try again.</string>
    <string name="permission_denied_grant_manually">This app cannot request your permission. The app won\'t work unless you grant it in Setttings.</string>
    <string name="invalid_path_message">Please enter a valid file path in the text field.</string>
    <string name="file_load_error">Enter a valid path and grant permissions.</string>
    <string name="file_read_error">Error loading PDF file.</string>
    <string name="delete_file_confirm">Are you sure you want to delete this file?</string>
    <string name="delete_file_error">Failed to delete file</string>
    <string name="null_pdf_error">Select a pdf file to open before starting.</string>
    <string name="pdf_page_error">Can\'t open the pdf file, issue with paging.</string>
    <string name="save_page_error">Couldn\'t save current page</string>
    <string name="invalid_page_number">Enter a valid page number.</string>
    <string name="ignore_battery_optimization">For this app to always continue working, you need to turn off battery optimization for this app.</string>
    <string name="floating_timer">Floating Timer</string>
    <string name="close_timer">Close Timer</string>
    <string name="minimize_timer">Minimize Timer</string>
    <string name="launch_app">Launch App</string>
    <string name="pdf_not_supported">Sorry, PDF Reader is only available on phones running Android 5 and higher.</string>
    <string name="new_timer">New Timer</string>
    <string name="schedule_repeating_timer">Schedule repeating Timer</string>
    <string name="schedule_timer">Schedule Timer</string>
    <string name="collapsed_calculator_icon">Collapsed Calculator Icon</string>
    <string name="calculator_history">Calculator History</string>
    <string name="clear_calc_text">CLR</string>
    <string name="minimize_calc">Minimize Calculator</string>
    <string name="del">DEL</string>
    <string name="close_calc">Close Calculator</string>
    <string name="close_pdf">Close Floating PDF</string>
    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="pdf_page">PDF Page</string>
    <string name="collapsed_pdf_page">Collapsed PDF Page</string>
    <string name="pdf_logo">PDF Logo</string>
    <string name="calculator_logo">Calculator Logo</string>
    <string name="bible_logo">Bible Logo</string>
    <string name="timer_logo">Timer Logo</string>
    <string name="minimize_bible">Minimize Bible</string>
    <string name="close_bible">Close Bible</string>
    <string name="minimize_pdf">Minimize PDF</string>
    <string name="caret_right">Move Caret to the Right</string>
    <string name="caret_left">Move caret to the left</string>
    <string name="clear">Clear</string>
    <string name="maximize_timer">Maximize Timer</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="floating_music_player">Floating Music Player</string>
    <string name="to_power">Raised to power</string>
    <string name="floating_music_coming">Floating Music is coming soon.</string>
    <string name="floating_copy_text_field">Clipboard Copy</string>
    <string name="floating_web_browser">Floating Web Browser</string>
    <string name="floating_copy_text_coming">Share clipboard content between your devices on the same network.</string>
    <string name="floating_browser_coming">Floating Browser is coming soon.</string>
    <string name="min_number_hint">Enter minimum number</string>
    <string name="max_number_hint">Enter maximum number</string>
    <string name="generate">Generate Random Number</string>
    <string name="floating_network_monitor">Network Monitor</string>
    <string name="random_number_shortcut_short_label">Random Number</string>
    <string name="random_number_shortcut_long_label">Generate Random Number</string>
    <string name="random_number_tile_label">Random Number</string>
    <string name="random_number_tile_description">Open floating random number generator</string>
    <string name="share">Share</string>
    <string name="scan">Scan</string>
    <string name="ready">Ready to share clipboard</string>
    <string name="clipboard_image_preview">Image Preview</string>
    <string name="close">Close</string>
    
    <!-- Voice Translator Strings -->
    <string name="voice_translator_logo">Voice Translator Logo</string>
    <string name="minimize_voice_translator">Minimize Voice Translator</string>
    <string name="close_voice_translator">Close Voice Translator</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="recording">Recording...</string>
    <string name="processing">Processing...</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="translation_history">Translation History</string>
    <string name="clear_history">Clear History</string>
    <string name="original_text">Original Text</string>
    <string name="translated_text">Translated Text</string>
    <string name="copy_text">Copy Text</string>
    <string name="share_text">Share Text</string>
    <string name="no_translation_history">No translation history</string>
    <string name="recording_permission_required">Recording permission is required for this feature</string>
    <string name="internet_permission_required">Internet permission is required for translation</string>
    <string name="translation_error">Translation error occurred</string>
    <string name="recording_error">Recording error occurred</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="korean">Korean</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="russian">Russian</string>
    <string name="voice_translator_widget_description">Quick access to Video Voice Translator</string>
    <string name="arabic">Arabic</string>
</resources>
