<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/min_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/min_number_hint"
        android:inputType="number" />

    <EditText
        android:id="@+id/max_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/min_number"
        android:hint="@string/max_number_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/max_number"
        android:text="@string/generate" />

    <TextView
        android:id="@+id/result_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate_button" />

    <Button
        android:id="@+id/minimize_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="Minimize" />
</RelativeLayout> 