<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/collapsedTimer"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:background="@android:color/white"
        android:contentDescription="@string/maximize_timer"
        android:src="@drawable/floating_timer" />

    <RelativeLayout
        android:id="@+id/expandedTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/timerTopNav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/buttonColor">

            <ImageView
                android:id="@+id/launch_app"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/launch_app"
                android:src="@drawable/launch_app" />

            <ImageView
                android:id="@+id/minimizeTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/minimize_timer"
                android:src="@drawable/minimize_icon" />

            <ImageView
                android:id="@+id/closeTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/close_timer"
                android:src="@android:drawable/ic_delete" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/timerBackground"
            android:layout_below="@+id/timerTopNav">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/select_timer_mode"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:baselineAligned="false"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/schedule_timer"
                    android:textColor="@color/scheduleTimerColor"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/new_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_timer"
                        android:textAllCaps="false" />

                    <Button
                        style="?android:attr/buttonBarButtonStyle"
                        android:id="@+id/schedule_timer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_repeating_timer"
                        android:textAllCaps="false" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_timer_expanded"
                android:layout_below="@+id/select_timer_mode"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00:00:00"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="@color/scheduleTimerColor"
                    android:textSize="30sp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/ok"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:id="@+id/back_to_timer_mode"
                        android:text="@string/cancel"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/repeating_timer_expanded"
                android:layout_below="@+id/new_timer_expanded"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:text="@string/ok"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:id="@+id/cancel_repeating_timer"
                        android:text="@string/cancel"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repeating_timer_expanded"
                android:id="@+id/counting_timer_view"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/pause"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/stop"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5sp"
                        android:text="@string/back"
                        android:textColor="@color/timerButtonTextColor"
                        android:background="@drawable/round_button"/>
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>