<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="match_parent"
	android:layout_width="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:weightSum="2"
		android:id="@+id/fifthLine"
		android:layout_below="@+id/fourthLine"
		android:padding="10dp">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_network"
			android:background="@color/buttonColor"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:padding="10dp">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/network_monitor_logo"
				android:id="@+id/networkLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/networkLogo"
				android:text="@string/floating_network_monitor"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>
		
		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_calculator"
			android:layout_margin="10dp"
			android:background="#00aaaa"
			android:layout_weight="1"
			android:padding="10dp">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/simple_calc"
				android:id="@+id/calcLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/calcLogo"
				android:text="@string/floating_calc"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
        android:baselineAligned="false"
		android:orientation="horizontal"
		android:weightSum="2"
		android:id="@+id/secondLine"
		android:layout_below="@+id/firstLine"
		android:padding="10dp">

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_voice_translator"
			android:background="@color/buttonColor"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:padding="10dp">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/voice_translator_logo"
				android:id="@+id/voiceTranslatorLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/voiceTranslatorLogo"
				android:text="@string/floating_voice_translator"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_clicker"
			android:background="@color/buttonColor"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:padding="10dp"
			android:clickable="true"
			android:focusable="true"
			android:foreground="?android:attr/selectableItemBackground">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/clicker_logo"
				android:id="@+id/clickerLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/clickerLogo"
				android:text="@string/floating_clicker"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/thirdLine"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/secondLine"
		android:layout_marginTop="-4dp"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:padding="10dp"
		android:weightSum="2">

		<RelativeLayout
			android:id="@+id/floating_timer"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@color/buttonColor"
			android:padding="10dp">

			<ImageView
				android:id="@+id/timerLogo"
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:layout_centerHorizontal="true"
				android:src="@drawable/floating_timer" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/timerLogo"
				android:layout_centerHorizontal="true"
				android:gravity="center"
				android:paddingTop="5dp"
				android:text="@string/floating_timer"
				android:textColor="#FFFFFF" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/floating_music"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:background="@color/buttonColor"
			android:padding="10dp">

			<ImageView
				android:id="@+id/musicLogo"
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:layout_centerHorizontal="true"
				android:src="@drawable/music_logo" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/musicLogo"
				android:layout_centerHorizontal="true"
				android:gravity="center"
				android:paddingTop="5dp"
				android:text="@string/floating_music_player"
				android:textColor="#FFFFFF" />

		</RelativeLayout>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:baselineAligned="false"
		android:orientation="horizontal"
		android:weightSum="2"
		android:id="@+id/fourthLine"
		android:layout_below="@+id/thirdLine"
		android:padding="10dp">
		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_copyTextField"
			android:background="@color/buttonColor"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:padding="10dp">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/copy_logo"
				android:id="@+id/copyLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/copyLogo"
				android:text="@string/floating_copy_text_field"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>
		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:id="@+id/floating_browser"
			android:background="@color/buttonColor"
			android:layout_margin="10dp"
			android:layout_weight="1"
			android:padding="10dp">

			<ImageView
				android:layout_width="45dp"
				android:layout_height="45dp"
				android:src="@drawable/browse_logo"
				android:id="@+id/browserLogo"
				android:layout_centerHorizontal="true"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/browserLogo"
				android:text="@string/floating_web_browser"
				android:layout_centerHorizontal="true"
				android:paddingTop="5dp"
				android:textColor="#FFFFFF"
				android:gravity="center"/>

		</RelativeLayout>

	</LinearLayout>

	<!-- App Header moved to bottom -->
	<LinearLayout
		android:id="@+id/app_header"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/buttonColor"
		android:orientation="horizontal"
		android:padding="15dp"
		android:gravity="center">

		<ImageView
			android:id="@+id/app_logo"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:src="@drawable/voice_translator_logo"
			android:layout_marginEnd="10dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/app_name"
			android:textColor="#FFFFFF"
			android:textSize="20sp"
			android:textStyle="bold"/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=" - Long Press for Quick Actions"
			android:textColor="#CCCCCC"
			android:textSize="12sp"
			android:layout_marginStart="5dp"/>

	</LinearLayout>

</RelativeLayout>